sources/template-service/c-service/c-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: c-deployment
  namespace: template-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: c
  template:
    metadata:
      name: c-pod
      labels:
        app: c
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/actuator/prometheus"
    spec:
      containers:
        - name: c-container
          image: esperimentesi/template
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 250
            periodSeconds: 5
