sources/template-service/c-service/c-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: c-svc
  namespace: template-ns
spec:
  type: NodePort
  selector:
    app: c
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30003
